Dev: LA-166 - sidebar spacing and nav bugs (#4078)
* LA-166: Adjust sidebar spacing and resolve navigation bugs

* QE-1285: unify statistics icon usage across the application

* LA-166: Fix site name & color in topbar

* QE-1284: Menu Icons Order and Class names

---------

--- a/themes/admin/Sea_Green/css/sea_green-rtl.css
+++ b/themes/admin/Sea_Green/css/sea_green-rtl.css
@@ -18994,7 +18994,6 @@ input[type=number] {
 }
 .sidebar .sidebar-icons .sidebar-icon {
   cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.25) 0 4px 4px 0;
   margin-top: 10px;
 }
 .sidebar .sidebar-icons .sidebar-icon:first-child {
